kube-config/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: d96a019601598f8fac5444901056f299a13b8518
    app.quarkus.io/build-timestamp: 2024-02-06 - 21:52:22 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.kubernetes.io/part-of: demo-service
    app.kubernetes.io/name: demo-service
    app.kubernetes.io/version: 0.0.16-native
  name: demo-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: demo-service
      app.kubernetes.io/name: demo-service
      app.kubernetes.io/version: 0.0.16-native
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: d96a019601598f8fac5444901056f299a13b8518
        app.quarkus.io/build-timestamp: 2024-02-06 - 21:52:22 +0000
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
        prometheus.io/port: "8080"
        prometheus.io/scheme: http
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.kubernetes.io/part-of: demo-service
        app.kubernetes.io/name: demo-service
        app.kubernetes.io/version: 0.0.16-native
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/wpernath/demo-service:v0.0.16-native
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: demo-service
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/started
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
