kube-config/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.quarkus.io/commit-id: d96a019601598f8fac5444901056f299a13b8518
    app.quarkus.io/build-timestamp: 2024-02-06 - 21:52:22 +0000
  labels:
    app: demo-service
    app.kubernetes.io/component: demo-service
    app.kubernetes.io/instance: demo-service
    app.kubernetes.io/name: demo-service
    app.kubernetes.io/part-of: demo-service
    app.kubernetes.io/managed-by: quarkus
    app.kubernetes.io/version: 0.0.16-native
  name: demo-service
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: demo-service
    weight: 100
  wildcardPolicy: None
